# wireguard-configure

./: Cargo.toml  README.md
src/: endpoint.rs  main.rs
